Finish metric methods/Pre CSS styling

--- a/app/views/layouts/_journal_entry.html.erb
+++ b/app/views/layouts/_journal_entry.html.erb
@@ -2,3 +2,5 @@
 <%= f.label "Title" %>
 <%= f.text :content %>
 <%= f.collection_select :journal_id, @journals, :id, :title %>
+
+<%# WORK IN PROGRESS %>
