--- a/app/views/metrics/index.html.erb
+++ b/app/views/metrics/index.html.erb
@@ -1,4 +1,6 @@
-<%= "Welcome, #{@user.name.split(" ").first} "%>
-<%= "From this page you can view your CareCasts, you can view by current day, a specified day, week, and month."%>
+<h1><%= "Welcome, #{@user.name.split(" ").first} "%>! <h2>
 
-<h2><%= link_to "Today's CareCast",  %></h2>
+<h2> Select which stats you would like to see </h2>
+
+
+
