--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%= link_to "Dashboard", user_path(@user) %>
+    <%= link_to "Journals", journals_path %>
+    <%= link_to "New Cast", new_metric_path %>
+    <%= link_to "View Stats", metrics_path %>
   </head>
 
   <body>
